[package]
name = "dgraph_query_lib"
version = "0.1.0"
authors = ["d0nut <nathanial.lattimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9"
itertools = "0.9"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"